--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint:scss": "stylelint \"src/**/*.scss\" --syntax=scss",
     "lint:js": "eslint \"src/**/*.js\"",
     "start": "gulp",
+    "server": "nodemon application/index.js",
     "build": "cross-env NODE_ENV=production npm start build",
     "lint-staged": "lint-staged",
     "precommit": "lint-staged"
@@ -54,11 +55,14 @@
     "imagemin-pngquant": "^5.1.0",
     "lint-staged": "^4.3.0",
     "merge-stream": "^1.0.1",
+    "nodemon": "^1.18.4",
     "normalize.css": "^7.0.0",
     "postcss-import": "^11.0.0",
     "postcss-inline-svg": "^3.0.0",
     "sort-css-media-queries": "^1.3.3",
     "stylelint": "^9.3.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "express": "^4.16.4"
+  }
 }
