--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "gulp-sourcemaps": "^2.4.1",
     "gulp-svgmin": "^1.2.3",
     "gulp-svgstore": "^6.1.0",
+    "gulp-typescript": "^5.0.0-alpha.3",
     "gulp-uglify": "^3.0.0",
     "gulp-wait": "0.0.2",
     "husky": "^0.14.3",
@@ -58,7 +59,8 @@
     "postcss-import": "^11.0.0",
     "postcss-inline-svg": "^3.0.0",
     "sort-css-media-queries": "^1.3.3",
-    "stylelint": "^9.3.0"
+    "stylelint": "^9.3.0",
+    "typescript": "^3.1.3"
   },
   "dependencies": {}
 }
