--- a/.eslintrc
+++ b/.eslintrc
@@ -6,7 +6,10 @@
     "node": true,
     "browser": true
   },
-
+  "parserOptions": {
+    "sourceType": "module",
+    "allowImportExportEverywhere": true
+  },
   "rules": {
     "no-undef": 0,
     "quotes": [2, "single", {"avoidEscape": true}],
