--- a/package.json
+++ b/package.json
@@ -62,5 +62,7 @@
     "stylelint": "^9.3.0",
     "typescript": "^3.1.3"
   },
-  "dependencies": {}
+  "dependencies": {
+    "pepjs": "^0.4.3"
+  }
 }
